--- a/package.json
+++ b/package.json
@@ -3,5 +3,13 @@
   "version": "1.0.0",
   "repository": "https://github.com/CatLover91/php-example.git",
   "author": "catlover91 <7215827+CatLover91@users.noreply.github.com>",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
+    "snazzy": "^7.1.1",
+    "standard": "^11.0.0",
+    "webpack": "^4.1.1"
+  }
 }
